k8s/todo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      imagePullSecrets:
      - name: ecr-pull-secret
      containers:
      - name: todo-container
        image: $IMAGE_URL
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: todo-service
