k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /token
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 80

      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: media-service
            port:
              number: 80
